

Revision History:
 9-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding stubs for various unimplemented JavaScript Window properties.
Additions:
    1. Added support for the following JavaScript Window properties: frames, name, opener, top
    2. Added do-nothing stubs for the Window properties and functions: closed, close(), moveTo(), focus(), setTimeout()

 8-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,
           for pointing out the value of retaining the same ScriptingEngine instance for a ScriptableDelegate.

Additions:
    1. Links, forms, and images now have a readable title property.
    2. The navigator object now supports the readable 'platform' property.
    3. The screen object is now supported, with properties availHeight and availWidth
    4. The Window.open function is now supported

Problems fixed:
    1. When not using Latin-1 encoding, URL string characters *, _, and - were improperly being encoded
    2. AuthorizationRequiredException was being thrown even when exceptions on error status was disabled
    3. Repeated requests for the same JavaScript domain objects returned new and different instances, thus
       preventing identity tests.


 4-Oct-2002
Additions:
    1. WebClient now supports a WebWindowListener which will be called when a new window is opened.

 3-Oct-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.

Additions:
    1. Following the "_blank" target now creates a new web window, with its own set of frames. Following links or submitting
       forms will update the window from which the request originated. Requests may also now be initiated from an open window.
       The list of open windows is a property of the web client.