@@ -16,6 +16,9 @@ Acknowledgements:
 Additions:
     1. Added support for the following JavaScript Window properties: frames, name, opener, top
     2. Added do-nothing stubs for the Window properties and functions: closed, close(), moveTo(), focus(), setTimeout()
+Problems fixed:
+    1. ServletUnit was not supporting mappings for the default servlet.
+
 
  8-Oct-2002
 Acknowledgements:
